force-app/main/default/objects/Hostel__c/fields/date_time__c.field-meta.xml
<CustomField>
    <fullName>date_time__c</fullName>
    <formula>DATETIMEVALUE(user_date__c + &#39; &#39; + user_time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>date_time</label>
    <type>DateTime</type>
</CustomField>