force-app/main/default/objects/Hostel__c/fields/RoomNo__c.field-meta.xml
<CustomField>
    <fullName>RoomNo__c</fullName>
    <description>Rooms no in hostel</description>
    <label>RoomNo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>