force-app/main/default/objects/Hostel__c/fields/user_date__c.field-meta.xml
<CustomField>
    <fullName>user_date__c</fullName>
    <label>user_date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>