force-app/main/default/objects/Hostel__c/fields/user_time__c.field-meta.xml
<CustomField>
    <fullName>user_time__c</fullName>
    <label>user_time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>